Fixed misaligned nav icon

--- a/css/style.css
+++ b/css/style.css
@@ -195,7 +195,7 @@ nav>ul>li>a {
 .navtoggle li .icon {
     position: absolute;
     right: 0;
-    top: 21px;
+    top: 18px;
     font-size: 20px;
     padding-right: 0;
 }
